[gd_scene load_steps=9 format=3 uid="uid://q2ojurgqkfk0"]

[ext_resource type="Script" path="res://scenes/menus/lose_screen/lose_screen.gd" id="1_ooe3w"]

[sub_resource type="Animation" id="Animation_0202a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("YouLose:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CurrentHighscore:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TimeSurvived:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Retry:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("NewHighscore:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_q5hwx"]
resource_name = "lose"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0.8, 0, 0, 0.741176)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("YouLose:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.23333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CurrentHighscore:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TimeSurvived:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Retry:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("NewHighscore:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a0hnl"]
_data = {
"RESET": SubResource("Animation_0202a"),
"lose": SubResource("Animation_q5hwx")
}

[sub_resource type="Animation" id="Animation_n455l"]
resource_name = "new_highscore"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NewHighscore:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.266667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hvpo8"]
_data = {
"new_highscore": SubResource("Animation_n455l")
}

[sub_resource type="LabelSettings" id="LabelSettings_25m2j"]
font_size = 56

[sub_resource type="LabelSettings" id="LabelSettings_b83cf"]
font_size = 32

[node name="LoseScreen" type="CanvasLayer" node_paths=PackedStringArray("you_lose", "current_highscore", "time_survived") groups=["lose_screen"]]
script = ExtResource("1_ooe3w")
you_lose = NodePath("YouLose")
current_highscore = NodePath("CurrentHighscore")
time_survived = NodePath("TimeSurvived")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(0.230315, 0.230315, 0.230315, 1)
self_modulate = Color(0.716296, 0.716296, 0.716296, 1)
offset_right = 1161.0
offset_bottom = 659.0
color = Color(0, 0, 0, 0)

[node name="LoseAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_a0hnl")
}

[node name="HighscoreAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hvpo8")
}

[node name="YouLose" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -207.5
offset_top = -70.5
offset_right = 207.5
offset_bottom = -7.5
grow_horizontal = 2
grow_vertical = 2
text = "YOU LOSE!!!"
label_settings = SubResource("LabelSettings_25m2j")
horizontal_alignment = 1

[node name="CurrentHighscore" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -161.5
offset_top = 69.5
offset_right = 59.5
offset_bottom = 88.5
grow_horizontal = 2
grow_vertical = 2
text = "Current Highscore"

[node name="TimeSurvived" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -99.5
offset_top = 107.5
offset_right = 57.5
offset_bottom = 126.5
grow_horizontal = 2
grow_vertical = 2
text = "Time Survived"

[node name="Retry" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.0
offset_top = 199.0
offset_right = 59.0
offset_bottom = 237.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 26
text = "Retry"
flat = true

[node name="NewHighscore" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -171.5
offset_top = -167.0
offset_right = 171.5
offset_bottom = -131.0
grow_horizontal = 2
grow_vertical = 2
text = "New Highscore!"
label_settings = SubResource("LabelSettings_b83cf")

[connection signal="pressed" from="Retry" to="." method="_on_retry_pressed"]
